--- a/Rizz-game.html
+++ b/Rizz-game.html
@@ -89,6 +89,7 @@
     /***** Config *****/
     const QUEUE_TTL_MS = 30000;    // ticket expires after 30s
     const CLAIM_BATCH  = 8;        // check up to N candidates while claiming
+    const CHUNK_SIZE   = 16 * 1024;
 
     /***** State *****/
     let peer, conn;
@@ -122,6 +123,16 @@
     }
     function isFresh(ts){ return !ts || (Date.now() - ts) < QUEUE_TTL_MS; }
     function safeRemove(r){ try{ r && remove(r); }catch{} }
+
+    // Robust conversion of received chunk payloads → Uint8Array
+    function toUint8(data){
+      if (data instanceof ArrayBuffer) return new Uint8Array(data);
+      if (ArrayBuffer.isView(data)) return new Uint8Array(data.buffer);
+      if (data && data.data && Array.isArray(data.data)) return new Uint8Array(data.data); // Node-style
+      // As a last resort, try Blob
+      if (data instanceof Blob) return new Uint8Array(); // we'll never send raw Blob here
+      return new Uint8Array();
+    }
 
     /***** Matchmaking (Realtime Database) *****/
     function joinQueue(){
@@ -242,7 +253,7 @@
       peer.on('call', async (call)=>{
         try{
           const s = await navigator.mediaDevices.getUserMedia({ audio:true });
-          liveLocalStream = s;
+        liveLocalStream = s;
           call.answer(s);
           liveCall = call;
           call.on('stream', attachRemoteLive);
@@ -329,7 +340,7 @@
       });
     });
 
-    /***** Recording → Send pickup line *****/
+    /***** Recording → Send pickup line (send ArrayBuffer chunks) *****/
     function startRec(){
       navigator.mediaDevices.getUserMedia({ audio:true }).then(s=>{
         recordingStream = s;
@@ -337,7 +348,7 @@
         try{ mediaRecorder = new MediaRecorder(s, mime?{mimeType:mime}:{}) }catch(e){ alert('Recorder failed: '+e.message); return; }
         audioChunks = [];
         mediaRecorder.ondataavailable = e => { if (e.data && e.data.size>0) audioChunks.push(e.data); };
-        mediaRecorder.onstop = () => {
+        mediaRecorder.onstop = async () => {
           recordingStream.getTracks().forEach(t => t.stop());
           const finalMime = mediaRecorder.mimeType || mime || 'audio/webm';
           const b = new Blob(audioChunks, { type: finalMime });
@@ -361,14 +372,19 @@
     function reallySendAudio(blob, mimeType){
       if (!(conn && conn.open)) return;
       conn.send({ type:'audio-start', mime: mimeType, size: blob.size });
-      const r = new FileReader(); let o = 0;
-      r.onload = e => {
-        conn.send({ type:'audio-chunk', data:new Uint8Array(e.target.result) });
-        o += e.target.result.byteLength;
-        if (o < blob.size) readNext(); else { conn.send({ type:'audio-end' }); setStatus('Line sent!'); }
-      };
-      function readNext(){ r.readAsArrayBuffer(blob.slice(o, o + 16*1024)); }
-      readNext();
+      let offset = 0;
+      function pump(){
+        const slice = blob.slice(offset, offset + CHUNK_SIZE);
+        const reader = new FileReader();
+        reader.onload = e => {
+          const arrbuf = e.target.result; // ArrayBuffer
+          conn.send({ type: 'audio-chunk', data: arrbuf });
+          offset += CHUNK_SIZE;
+          if (offset < blob.size) pump(); else { conn.send({ type:'audio-end' }); setStatus('Line sent!'); }
+        };
+        reader.readAsArrayBuffer(slice);
+      }
+      pump();
     }
 
     /***** Accept → Live audio *****/
@@ -448,15 +464,19 @@
     }
     function sendImg(blob, name){
       if (!(conn && conn.open)) return;
-      const r = new FileReader(); let o = 0;
+      let offset = 0;
       conn.send({ type:'image-start', mime: blob.type, name, size: blob.size });
-      r.onload = e => {
-        conn.send({ type:'image-chunk', data:new Uint8Array(e.target.result) });
-        o += e.target.result.byteLength;
-        if (o < blob.size) readNext(); else conn.send({ type:'image-end' });
-      };
-      function readNext(){ r.readAsArrayBuffer(blob.slice(o, o + 16*1024)); }
-      readNext();
+      function pump(){
+        const slice = blob.slice(offset, offset + CHUNK_SIZE);
+        const reader = new FileReader();
+        reader.onload = e => {
+          conn.send({ type:'image-chunk', data: e.target.result }); // ArrayBuffer
+          offset += CHUNK_SIZE;
+          if (offset < blob.size) pump(); else conn.send({ type:'image-end' });
+        };
+        reader.readAsArrayBuffer(slice);
+      }
+      pump();
     }
     function appendImg(b, sent){
       const box = $('#chat-window');
@@ -472,15 +492,53 @@
     function handleData(msg){
       if (!msg || !msg.type) return;
       switch(msg.type){
-        case 'profile': remoteProfile = msg.data || null; break;
-        case 'audio-start': incomingChunks=[]; incomingMime=msg.mime || 'audio/webm;codecs=opus'; setStatus('Receiving line…'); break;
-        case 'audio-chunk': incomingChunks.push(msg.data); break;
-        case 'audio-end': playBlobInAudio(new Blob(incomingChunks,{type:incomingMime})); setStatus('Line received!'); break;
-        case 'accept': acceptedRemote = true; showMatch(remoteProfile || {}); tryLive(); break;
-        case 'message': dispMsg(msg.data, false); break;
-        case 'image-start': rxImage={parts:[],mime:msg.mime||'image/jpeg',name:msg.name||'photo.jpg'}; break;
-        case 'image-chunk': rxImage.parts.push(msg.data); break;
-        case 'image-end': appendImg(new Blob(rxImage.parts,{type:rxImage.mime}), false); rxImage={parts:[],mime:'image/jpeg',name:'photo.jpg'}; break;
+        case 'profile':
+          remoteProfile = msg.data || null;
+          break;
+
+        case 'audio-start':
+          incomingChunks=[]; incomingMime=msg.mime || 'audio/webm;codecs=opus';
+          setStatus('Receiving line…');
+          break;
+
+        case 'audio-chunk': {
+          // msg.data is an ArrayBuffer (or similar) — normalize
+          const u8 = toUint8(msg.data);
+          if (u8.length) incomingChunks.push(u8);
+          break;
+        }
+
+        case 'audio-end': {
+          const blob = new Blob(incomingChunks, { type: incomingMime });
+          playBlobInAudio(blob);
+          setStatus('Line received!');
+          break;
+        }
+
+        case 'accept':
+          acceptedRemote = true; showMatch(remoteProfile || {}); tryLive();
+          break;
+
+        case 'message':
+          dispMsg(msg.data, false);
+          break;
+
+        case 'image-start':
+          rxImage={parts:[],mime:msg.mime||'image/jpeg',name:msg.name||'photo.jpg'};
+          break;
+
+        case 'image-chunk': {
+          const u8 = toUint8(msg.data);
+          if (u8.length) rxImage.parts.push(u8);
+          break;
+        }
+
+        case 'image-end': {
+          const blob = new Blob(rxImage.parts,{type:rxImage.mime});
+          appendImg(blob, false);
+          rxImage={parts:[],mime:'image/jpeg',name:'photo.jpg'};
+          break;
+        }
       }
     }
   </script>
